--- a/Novità.html
+++ b/Novità.html
@@ -16,7 +16,7 @@
 <body><header>
 <h1><img src="img/logo sito.jpg" width="150" height="100">CELEBRI VIGNOLESI</h1><nav>
 <ul>
-<strong><li><a href="homepage.html">HOME</a></li>
+<strong><li><a href="index.html">HOME</a></li>
 <li><a href="Chi siamo.html">CHI SIAMO?</a></li>
 <li class="active"><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
@@ -27,64 +27,52 @@
 </header>
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
-	
+
+<p><big><big><span style="text-decoration: underline;">19 marzo 2022</span></big></big></p><br><br>
+<p><big>La Torre Galvani di Vignola in un’opera di Rino Zapparoli. Si tratta della seconda di cinque acqueforti (intitolate complessivamente *Cinque vedute di Vignola*) che l’Artista realizzò nel 2008.</big></p><br>
+<img src="img/FOTO VARIE/zapparoli2.jpg" width="600" height="750"><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">10 marzo 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>UN AVVENIMENTO ANTIDILUVIANO</strong></i>, la terza favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da </strong>FRANCESCO SELMI</strong> (1817-1881):<br>  
+«Nei tempi antidiluviani, quando l’uomo non era apparso per anco sulla terra, gli animali che noi chiamiamo irragionevoli, deliberarono concordemente di unirsi in sociale famiglia, e nominare un capo, un sommo imperante, alla quale altissima dignità elessero il Leone. Per buona pezza le cose procedettero con ordine maraviglioso e contento di tutti; ma, non saprebbesi per quale ragione, un decreto del principe venne a turbare quella invidiabile quiete, e fu semenza di guerre cittadine, sanguinose, feroci, senza fine, che mieterono a migliaia le vittime, sperperarono ricchezze accumulate nella pace, e distrussero la floridezza del paese».<br>  
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
 
 <p><big><big><span style="text-decoration: underline;">28 febbraio 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL NUVILETTO E LA LUNA</strong></i>, la seconda favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>FRANCESCO SELMI</strong> (1817-1881):<br>  
 «Uno snello nuviletto, in mezzo all’azzurro firmamento, in serena e fresca notte di estate, stette fermo lunga pezza a mirare l’astro gentile che lo inargentava; al quale come ad innamorata sorrideva sì amabilmente, da pensare che perdutolo di vista, sarebbe per il grande dolore disciolto in pioggia o perdutosi in vaganti vapori.    
-Ma, ecco il crepuscolo, ecco l’alba e la succedente aurora. Raggi splendidissimi spuntano da oriente; luce dorata si diffonde sulla terra; la rugiada brilla; i fiori aprono la corolla; gli uccelli salutano gioiosi il dì che sorge».<br>    
+Ma, ecco il crepuscolo, ecco l’alba e la succedente aurora. Raggi splendidissimi spuntano da oriente; luce dorata si diffonde sulla terra; la rugiada brilla; i fiori aprono la corolla; gli uccelli salutano gioiosi il dì che sorge».<br>   
 Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
 
-<p><big><big><span style="text-decoration: underline;">15 febbraio 2022</span></big></big></p><br><br>
-<p><big>Oggi desideriamo ricordare un celebre Vignolese del secolo scorso, negli ultimi due decenni non adeguatamente onorato nella sua città natale. Ci riferiamo a don <strong>CASIMIRO BETTELLI</strong> (1924-1998), sacerdote, insegnante, poeta, scrittore, saggista, giornalista e collezionista d’arte.<br> 
-Per saperne di più su questa importante figura, visita il suo <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Bettelli.html">Profilo</a>.<br><br>
 
-Nell'immagine sottostante, prima di copertina di <i>Per tutti la pietà</i> (1967), una delle raccolte di versi di don Bettelli. Fonte: google.com</big></p>
-<img src="img/celebri vignolesi/Bettelli/pietà.jpg" width="500" height="700"><br><br><br>	
-	
 <p><big><big><span style="text-decoration: underline;">09 febbraio 2022</span></big></big></p><br><br>
-<p><big><strong>FRANCESCO SELMI</strong> (1817-1881) si cimentò con impegno in diversi settori. Egli stese anche numerosi romanzi, racconti e favole, la maggior parte dei quali risultano tuttora inediti. Nel licenziare per la stampa alcuni dei suoi testi narrativi, egli preferì celarsi dietro pseudonimo: ad esempio, questo è il caso della raccolta <i>I primi racconti scritti da un Maestruccio di Scuola</i> (1847), uscita in seconda edizione corretta e accresciuta con il titolo di <i>Racconti morali scritti da un Maestruccio di Scuola per lettura dei giovanetti italiani</i> (1853), ma è pure il caso di <i>Il Favoleggiatore</i> (1857), raccolta di favole firmata «M. di S.»; inoltre, l’Autore pubblicò il romanzo <i>Battista Cannatelli</i> (1866) sotto il nome di «Italo De’ Vecchi».<br>
+<p><big>FRANCESCO SELMI (1817-1881) si cimentò con impegno in diversi settori. Egli stese anche numerosi romanzi, racconti e favole, la maggior parte dei quali risultano tuttora inediti. Nel licenziare per la stampa alcuni dei suoi testi narrativi, egli preferì celarsi dietro pseudonimo: ad esempio, questo è il caso della raccolta <i>I primi racconti scritti da un Maestruccio di Scuola</i> (1847), uscita in seconda edizione corretta e accresciuta con il titolo di <i>Racconti morali scritti da un Maestruccio di Scuola per lettura dei giovanetti italiani</i> (1853), ma è pure il caso di <i>Il Favoleggiatore</i> (1857), raccolta di favole firmata «M. di S.»; inoltre, l’Autore pubblicò il romanzo <i>Battista Cannatelli</i> (1866) sotto il nome di «Italo De’ Vecchi».<br>
 Presentiamo qui la trascrizione della prima favola contenuta in <i>Il Favoleggiatore (dati completi di questo volumetto selmiano: Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX dal M. di S., Torino, Tip. di G.B. Paravia e Comp., 1857). Via via, con cadenza grosso modo bimestrale, pubblicheremo la trascrizione di tutte le restanti 43 favole dell’opera. Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state indicate caso per caso.<br><br>
-Qui sotto, l’<i>incipit</i> della prima favola dell’opera, <i>L’usignuolo</i>:<br>  
+Qui sotto, l’<i>incipit</i> della prima favola dell’opera, <i>L’usignuolo</i>:  
+
+ 
+
 «Un usignuolo era uscito in busca di cibo, lasciando la sua compagna a covare nel nido, quando tornato videsi dinnanzi un orrendo macello della sua famigliuola. La sposa uccisa, gli uovicini nati testé e frutti del primo amore, rotti, succhiati; opera sanguinosa di una serpe nemica, che da lungo tempo strisciava al piede dell’albero, e più volte erasi provata a salirlo per consumarvi il misfatto.<br>
+
 Rimase tale dal fortissimo dolore, che non poté più muoversi di là; e si posò poco stante sopra un ramicello senza guaire, muto, intirizzito, in sembianza più di morto che di vivo.<br>  
-Stette fermo a lungo tempo inconsapevole di se medesimo; ma in sulla sera in tramontar del sole fu tocco, tra fronda e fronda, da un languido raggio dell’astro prossimo all’orizzonte; e come sveglio da quella luce temperata, si scosse e intuonò un suo canto, che parve a salutarla. Non canto lamentoso, non querulo, non lugubre; anzi un vivacissimo trillare, uno splendido gorgheggio, con frammezzo una sequenza animosa di melodie soavi, delicate, esprimenti i teneri affetti di un cuore dolcemente commosso. Così egli soleva, nei primi giorni di primavera, chiamare ai casti baci la sua diletta quando se ne innamorò; e in modo somigliante fece gioiosamente tremolare l’aura notturna quando il nido fu costrutto e vi fu deposto il primo uovo». CONTINUA <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">QUI</a><br><br> 
-Nell’immagine, la prima di copertina di uno dei pochissimi esemplari ancora disponibili di <i>Il Favoleggiatore</i>, quello conservato presso la Biblioteca Comunale “Francesco Selmi” di Vignola.</big></p><br>
+
+Stette fermo a lungo tempo inconsapevole di se medesimo; ma in sulla sera in tramontar del sole fu tocco, tra fronda e fronda, da un languido raggio dell’astro prossimo all’orizzonte; e come sveglio da quella luce temperata, si scosse e intuonò un suo canto, che parve a salutarla. Non canto lamentoso, non querulo, non lugubre; anzi un vivacissimo trillare, uno splendido gorgheggio, con frammezzo una sequenza animosa di melodie soavi, delicate, esprimenti i teneri affetti di un cuore dolcemente commosso. Così egli soleva, nei primi giorni di primavera, chiamare ai casti baci la sua diletta quando se ne innamorò; e in modo somigliante fece gioiosamente tremolare l’aura notturna quando il nido fu costrutto e vi fu deposto il primo uovo».<br><br>
+CONTINUA <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">QUI</a><br><br> 
+
+Nell’immagine, la prima di copertina di uno dei pochissimi esemplari ancora disponibili di Il Favoleggiatore, quello conservato presso la Biblioteca Comunale “Francesco Selmi” di Vignola.</big></p><br>
 <img src="img/FOTO VARIE/copertina.jpg" width="550" height="750"><br><br><br><br>
 
-<p><big><big><span style="text-decoration: underline;">07 febbraio 2022</span></big></big></p><br><br>
-<p><big>Uno dei più importanti musei del mondo è il Museo Correr di Venezia. Le sue collezioni sono ospitate esattamente da un secolo nelle Procuratie Nuovissime (altrimenti dette Ala Napoleonica o Nuova Fabbrica) e in parte delle Procuratie Nuove, edifici che danno sulla Piazza San Marco.  
-	Il vignolese <strong>GIUSEPPE MARIA SOLI</strong> (1745-1822), del quale quest’anno ricorre il duecentesimo della morte, fu uno degli architetti che prestarono la loro opera, all’inizio dell’Ottocento, con l’obiettivo di ricostruire una porzione delle Procuratie Nuovissime.<br><br>
-Nell’immagine sottostante, la facciata delle Procuratie Nuovissime verso Piazza San Marco. Fonte: google.com</big></p>
-<img src="img/FOTO VARIE/procuratie.jpg"><br><br><br>
-	
-	<p><big><big><span style="text-decoration: underline;">04 febbraio 2022</span></big></big></p><br><br>
+
+<p><big><big><span style="text-decoration: underline;">04 febbraio 2022</span></big></big></p><br><br>
 <p><big>L’ingresso al centro storico di Vignola dal Portello in un’acquaforte di Rino Zapparoli dal titolo <i>Il borgo</i>. Si tratta della prima di cinque acqueforti (intitolate complessivamente <i>Cinque vedute di Vignola</i>) che l’Artista realizzò nel 2008.</big></p><br>
-<img src="img/FOTO VARIE/zapparoli.jpg" width="600" height="750"><br><br><br><br><br>
+<img src="img/FOTO VARIE/zapparoli.jpg" width="600" height="750"><br><br><br>
 	
-<p><big><big><span style="text-decoration: underline;">31 gennaio 2022</span></big></big></p><br><br>
-<p><big>Ritratto di fantasia di Lodovico Antonio Muratori, litografia di Domenico Simonini (2021). L'opera è stata eseguita per l'associazione Amici dell'Arte Vignola.</big></p><br>
-<img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
-	
-<p><big><big><span style="text-decoration: underline;">29 gennaio 2022</span></big></big></p><br><br>
-<p><big>Il Palazzo dei Banchi di Bologna, sul lato orientale della Piazza Maggiore. La facciata del portico venne eseguita fra il 1565 e il 1568 su progetto di Barozzi. Fonte: google.com</big></p><br>
-<img src="img/celebri vignolesi/Barozzi/portico.jpg" width="800" height="600"><br><br><br>
-	
+
 <p><big><big><span style="text-decoration: underline;">23 gennaio 2022</span></big></big></p><br><br>
 <p><big>Qui sotto, un breve video girato nei giorni scorsi all’interno di Santa Maria della Pomposa, chiesa modenese della quale Muratori fu proposto dal 1716 al 1733.</big><br>
 <video width="350" height="250" controls>
     <source src="video/Santa Maria della Pomposa.mp4" type="video/mp4"></video></p>
     	<br><br><br>
 			
-	<p><big><big><span style="text-decoration: underline;">17 gennaio 2022</span></big></big></p><br><br>
-<p><big>Nell’immagine, la facciata dell’ottocentesca Villa Bellucci (poi, Tosi Bellucci), dal 1916 Residenza Municipale di Vignola.</big></p>
-<img src="img/FOTO VARIE/villa Tosi Bellucci.jpg" width="750" height="600"><br><br><br>
-	
-<p><big><big><span style="text-decoration: underline;">16 gennaio 2022</span></big></big></p><br><br>
-<p><big><i>A egregie cose il forte animo accendono
-L’urne de’ forti</i> […].</big></p>
-<p><big><strong>UGO FOSCOLO</strong></big></p><br><br><br>
-	
 <p><big><big><span style="text-decoration: underline;">14 gennaio 2022</span></big></big></p><br><br>
 <p><big>Oggi ricordiamo il pittore vignolese CESARE SOLI (1926-2010) con una sua natura morta dei primi anni Cinquanta. Olio su tavola. Opera inedita, collezione privata.</big></p>
 <img src="img/FOTO VARIE/soli.jpg" width="750" height="670"><br><br><br>
@@ -104,21 +92,8 @@ Se vuoi saperne di più su Paradisi, visita il suo <a href="https://sarascaglion
 <p><big>Nell’immagine sottostante, Palazzo Tirelli ai nostri giorni.</big></p><br>
 <p><img src="img/celebri vignolesi/Paradisi/palazzo tirelli.jpg" width="470" height="700"></p><br><br>
 	
-<p><big><big><span style="text-decoration: underline;">28 dicembre 2021</span></big></big></p><br><br>
-<p><big><i>I forti sono generati da forti e buoni</i>.</big></p>
-<p><big><strong>QUINTO ORAZIO FLACCO</strong></big></p><br><br><br>
-	
-<p><big><big><span style="text-decoration: underline;">16 dicembre 2021</span></big></big></p><br><br>
-<p><big><i>[l]a concatenazione delle generazioni diede opportunità di condizioni, e mezzi di perpetuarle con monumenti, simboli e lettere; onde un uomo solo, per quanto glielo concedono le sue facoltà, può ricevere i sentimenti e i pensieri di molti secoli, riprodurli con l’originalità della propria tempra e con gli accidenti che caratterizzano il tempo in cui vive, e rimandarli alle genti dell’avvenire</i>.</big></p>
-<p><big><strong>UGO FOSCOLO</strong></big></p><br><br><br>
-<p><big><big><span style="text-decoration: underline;">11 dicembre 2021</span></big></big></p><br><br>
 
-<p><big>Oggi attiriamo l’attenzione su una ricorrenza che riguarda un importante Vignolese del passato, <strong>FRANCESCO SELMI</strong> (1817-1881), chimico, inventore, divulgatore culturale e scientifico, patriota, alto funzionario pubblico, biografo, narratore, studioso di Dante e dei primi secoli della lingua italiana, nonché profondo conoscitore tanto della storia del paese natale quanto delle figure dei suoi figli più illustri.<br><br> 
-<strong>DICEMBRE 1861</strong>: pochi mesi dopo la proclamazione del Regno d’Italia, Francesco Selmi fece uscire un articolo, intitolato <i>La lingua nazionale nell’Italia nuova</i>, nella «Rivista Contemporanea», celebre periodico torinese di cultura e varia umanità al quale egli aveva già collaborato più volte. Qui sotto proponiamo ai nostri lettori un brano tratto da quel testo, e per la precisione dalla lettera dedicatoria a Luigi Carlo Farini (1812-1866):<br><br>
-<i>Può qualcuno, o di spiriti pregiudicati, o di coltura ristretta ad un dato ramo, per mancanza di vista più profonda, reputare solo opportuno ad Italia le strade da aprirsi, i commercii da risvegliare, gli opificii da moltiplicare; ma chi si allevò in più ampia cognizione delle cose nostre, e cercò i tempi di nostra grandezza, ed investigò l’indole dell’Italiano, non crede in buona fede che la sola prosperità materiale sia giovevole al pieno rifiorimento della penisola, né contentare le generazioni vegnenti. L’Italiano è fatto tale che ha uopo di alto levarsi; né per nulla ricevette per eloquio suo, la</i> favella degli Dei</i><i>, né il privilegio di primeggiare per via delle gentili discipline. La sola materia lo stanca ed invilisce; né mai potrebbe dimenticare che procede dal ceppo d’onde Redi, Galileo, da Vinci, l’Alberti, il Vallisnieri</i> [<i>,</i>] <i>il Manfredi, il Volta, il Mascheroni, cioè tutti i nostri sommi delle scienze naturali e matematiche, i quali accoppiarono alla cognizione di esse quella eziandio delle lettere, sì da essere scrittori forbiti ed eleganti. Sento vantare da parecchi gli Americani settentrionali, e proposti a modello; ma non coglierebbero più giusto se ci offrissero ad esemplari quei padri nostri che sono non solo fiaccola a noi, ma all’intero mondo civile?</i></big></p>
-<p><big>Nelle immagini sottostanti, riportiamo per intero la summenzionata lettera dedicatoria di Selmi a Farini.</big></p><br><br>
-<img src="img/celebri vignolesi/Selmi/lingua1.jpg"><br><br><br>
-<img src="img/celebri vignolesi/Selmi/lingua2.jpg"><br>
+	
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
