--- a/homepage.html
+++ b/homepage.html
@@ -59,10 +59,20 @@ La storia del Municipio dovrebbe insegnarsi per primo, ma in armonia, non in gue
 
 [...] <i>le città vanno in rovina quando non sono in grado di discernere gli uomini che non valgono nulla da quelli valenti.</i><br>
 <strong>Diogene Laerzio</strong><br><br>
-  
+
 <i>La virtù vuole che siamo giusti, e non lo è colui che considera con occhio uguale le generose azioni e le vili; che mostra rispetto a chi ha potere, e trascura il merito disarmato. Non è virtuoso chi non sa distinguere o ardisce distinguere le anime nobili dalle abjette</i> […].<br> 
 <i>L’uomo dabbene, anche solo, cominci a onorare il merito, a non usare col vizio i riguardi medesimi che destina alla virtù, mostri la disapprovazione se non altro col silenzio, cessi l’uomo d’essere uno schiavo in somma; e se questo principio si dilata su varj de’ cittadini, ben tosto s’accorgeranno che essi sono gli arbitri della reputazione, che la cattiva reputazione essendo una pena, essi co’ loro voti riuniti possono castigare gli uomini nocivi. Da qui il sentimento delle proprie forze, l’argine al vizio, la spinta al bene.</i><br>
 <strong>Pietro Verri</strong><br><br>
+
+<i>I forti sono generati da forti e buoni.</i><br>
+<strong>Quinto Orazio Flacco</strong><br><br>
+
+<i>A egregie cose il forte animo accendono<br>
+L’urne de’ forti</i> [...]<i>.</i><br>
+<strong>Ugo Foscolo</strong><br><br>
+
+[<i>l</i>]<i>a concatenazione delle generazioni diede opportunità di condizioni, e mezzi di perpetuarle con monumenti, simboli e lettere; onde un uomo solo, per quanto glielo concedono le sue facoltà, può ricevere i sentimenti e i pensieri di molti secoli, riprodurli con l’originalità della propria tempra e con gli accidenti che caratterizzano il tempo in cui vive, e rimandarli alle genti dell’avvenire.</i><br>
+<strong>Ugo Foscolo</strong><br><br>
 
 <i>Certo, è naturale che, nei centri piccoli e sconosciuti, non fioriscano le attività connesse con gli alti guadagni e il prestigio; ma la virtù, come un robusto sempreverde, mette radici dappertutto, purché trovi una natura generosa e un animo capace di sopportare la sofferenza. Allo stesso modo, non è corretto attribuire la responsabilità di un comportamento dissoluto e poco razionale al fatto di essere nati in una piccola città: nel caso, gli unici colpevoli siamo noi.</i><br>
 <strong>Plutarco di Cheronea</strong><br><br>
