--- a/dicembre.html
+++ b/dicembre.html
@@ -37,7 +37,8 @@
 
 Nelle immagini sottostanti, il testo integrale della summenzionata lettera dedicatoria di Selmi a Farini.</big></p><br><br>
 <img src="img/celebri vignolesi/Selmi/lingua1.jpg"><br><br>
-<img src="img/celebri vignolesi/Selmi/lingua2.jpg"><br><br>  
+<img src="img/celebri vignolesi/Selmi/lingua2.jpg"><br><br>
+<p><strong><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi Francesco.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>  
   
 <p><big><strong>2 dicembre 1876</strong>: morì a Vignola <strong>LUCA ANTONIO TOSI</strong>, medico, amministratore locale, letterato, studioso e patriota. Fu inumato nell’antico camposanto comunale; in seguito, le sue spoglie vennero traslate nella cappella Tosi Bellucci dell’attuale cimitero cittadino.<br><br>
 Luca Antonio Tosi nacque a Vignola il 27 ottobre 1811 in un’importante e facoltosa famiglia molto stimata nel Modenese. Mostrò subito avversione nei confronti del regime austroestense e diede il suo contributo per formare il Regno d’Italia e “fare gli Italiani”.<br>
