--- a/Muratori.html
+++ b/Muratori.html
@@ -40,15 +40,15 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
 <center><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center><br>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
-<p><center><big>Ritratto di fantasia di Muratori, litografia eseguita nel 2021 Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
+<p><center><big>Ritratto di fantasia di Muratori, litografia eseguita nel 2021 da Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
 <img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
-<p><center><big><big>Facciata della chiesa di Santa Maria della Pomposa.</big></big></center></p>
+<p><center><big>Facciata della chiesa di Santa Maria della Pomposa.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/facciata.jpg" width="800" height="580"><br><br>
-<p><center><big><big> Aedes Muratoriana (casa nella quale Muratori abitò dal 1716 al 1750.<br> L’accesso si trova dietro Santa Maria della Pomposa).</big></big></center></p>
+<p><center><big>Aedes Muratoriana (casa nella quale Muratori abitò dal 1716 al 1750.<br> L’accesso si trova dietro Santa Maria della Pomposa).</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/aedes.jpg" width="500" height="680"><br><br>
-<p><center><big><big>Lapide che sormonta l’ingresso della Aedes Muratoriana. Ricorda la figura del celebre Vignolese.</big></big></center></p>
+<p><center><big>Lapide che sormonta l’ingresso della Aedes Muratoriana. Ricorda la figura del celebre Vignolese.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapide.jpg" width="650" height="530"><br><br>
-<p><center><big><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></big></center></p>
+<p><center><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="500" height="650"></p>
 <p><strong><big><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p><br>
 </section>
