--- a/Novità.html
+++ b/Novità.html
@@ -28,6 +28,23 @@
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 
+<p><big><big><span style="text-decoration: underline;">2022<br><br>ANNIVERSARI DEI CELEBRI VIGNOLESI</span></big></big></p><br><br>
+ 
+<p><big><strong>PIETRO ANTONIO BERNARDONI</strong>, poeta, drammaturgo e librettista: <strong>350 ANNI DALLA NASCITA</strong>.<br><br> 
+ 
+<strong>PIETRO MINGHELLI</strong>, pittore e insegnante: <strong>200 ANNI DALLA MORTE</strong>.<br><br> 
+ 
+<strong>LODOVICO ANTONIO MURATORI</strong>, sacerdote, erudito, storico, archivista, trattatista e molto altro: <strong>350 ANNI DALLA NASCITA</strong>.<br><br>   
+ 
+<strong>AUGUSTA REDORICI ROFFI</strong>, maestra elementare, studiosa e divulgatrice di storia locale e scienze naturali: <strong>100 ANNI DALLA NASCITA</strong>.<br><br>   
+ 
+<strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p><br><br><br><br> 
+
+<p><big><big><span style="text-decoration: underline;">28 marzo 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL PASTORE E LE CAPRE</strong></i>, la quarta favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
+«Un pastore aveva una mandra di pecore, mansuete, obbedienti, che ruminavano nel sito loro assegnato, e stavano accozzate insieme, senza divagare mai qua e là, timidette ad ogni menoma voce che le raccogliesse per ricondurle all’ovile».<br>  
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>	
+
 <p><big><big><span style="text-decoration: underline;">19 marzo 2022</span></big></big></p><br><br>
 <p><big>La Torre Galvani di Vignola in un’opera di Rino Zapparoli. Si tratta della seconda di cinque acqueforti (intitolate complessivamente <i>Cinque vedute di Vignola</i>) che l’Artista realizzò nel 2008.</big></p><br>
 <img src="img/FOTO VARIE/zapparoli2.jpg" width="600" height="750"><br><br><br>
