--- a/usignolo.html
+++ b/usignolo.html
@@ -39,8 +39,8 @@ La voce dell’uomo trasse istintivamente l’usignuolo a piegare con naturale s
 Cadde boccheggiante giù ai piedi dell’uomo; il quale raccolse il misero cadaveruccio, caldo ancora, e con grande meraviglia cominciò a cercare in qual parte fosse stato ferito. Nulla vi scorse, per cui in allora, spinto da grande curiosità si arrampicò sull’albero e vide al chiaro crepuscolare, vicino al ramo su cui si atteneva l’uccello, le reliquie della commessavi devastazione, e tutto in istato di avvenimento succeduto da qualche ora.<br> 
 Ridiscese allora melanconico col nido, coi gusci e colla compagna dell’infelice usignuolo; scavò ivi una buca e ve li seppellì insieme; vi trasportò sopra una zolla di terra su cui cresceva una pianta di mammole; e d’allora in poi, quotidianamente andò ad assidersi là vicino, rammemorando sempre l’accaduto, e considerando come tal volta i più festosi in apparenza siano i più angosciati.</big></p><br><br>
 
-<p><big>* Abbiamo preferito questa forma, più coerente, utilizzata nell’Indice finale del volumetto; il titolo qui riportato nell’originale, invece, è «L’Usignolo». [Nota dei Curatori]</big></p><br><br><br>
-
+<p><big>* Abbiamo preferito questa forma, più coerente, utilizzata nell’Indice finale del volumetto; il titolo qui riportato nell’originale, invece, è «L’Usignolo».</big></p><br><br><br>
+  
 <p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
 </section>
