--- a/Pellegrini.html
+++ b/Pellegrini.html
@@ -34,7 +34,7 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><center><big><big>Mario Pellegrini in uniforme. Fonte: sito <a href="https://www.lavocedelmarinaio.com">La voce del marinaio</a>, <i>ad nomen</i>..</big></big></center></p>
+<p><center><big><big>Mario Pellegrini in uniforme. Fonte: sito <a href="https://www.lavocedelmarinaio.com">La voce del marinaio</a>, <i>ad nomen</i>.</big></big></center></p>
 <img src="img/celebri vignolesi/Pellegrini Mario/Pellegrini marinaio.jpg" width="500" height="650"><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
