--- a/Novità.html
+++ b/Novità.html
@@ -40,7 +40,7 @@
  
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell'immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata ieri.</big></p><br>
-<img src="img/FOTO VARIE/roccainfiore.JPG" width="900" height="700"><br><br><br><br><br><br> 
+<img src="img/FOTO VARIE/roccainfiore.jpg" width="900" height="700"><br><br><br><br><br><br> 
 	
 <p><big><big><span style="text-decoration: underline;">28 marzo 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL PASTORE E LE CAPRE</strong></i>, la quarta favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
