--- a/Novità.html
+++ b/Novità.html
@@ -39,7 +39,7 @@
 <strong>AUGUSTA REDORICI ROFFI</strong>, maestra elementare, studiosa e divulgatrice di storia locale e scienze naturali: <strong>100 ANNI DALLA NASCITA</strong>.<br><br>   
  
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
-<p><big>Nell'immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata ieri.</big></p><br>
+<p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/roccainfiore.jpg" width="900" height="700"><br><br><br><br><br><br> 
 	
 <p><big><big><span style="text-decoration: underline;">28 marzo 2022</span></big></big></p><br><br>
