--- a/Bettelli.html
+++ b/Bettelli.html
@@ -61,7 +61,7 @@ Alla sua morte, si scoprì che egli aveva acquistato nel tempo più di 800 pezzi
 <img src="img/celebri vignolesi/Bettelli/pietà.jpg" width="500" height="700"><br><br><br>
 <p><big><big><center>Prima di copertina di <i>I preti uccisi</i> (1985). Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Bettelli/preti.jpg" width="500" height="750"><br><br><br>
-<p><big><big><center>Prima di copertina del Catalogo della mostra organizzata nella Palazzina dei Giardini di Modena (11 dicembre 1999 - 31 gennaio 2000).</center></big></big></p>
+<p><big><big><center>Prima di copertina del Catalogo della mostra organizzata nella Palazzina dei Giardini di Modena<br> (11 dicembre 1999 - 31 gennaio 2000).</center></big></big></p>
 <img src="img/celebri vignolesi/Bettelli/mostra.jpg" width="550" height="750"><br><br><br>
 <p><big><big><center>Tomba di don Bettelli nel cimitero di Campiglio di Vignola.</center></big></big></p>
 <img src="img/celebri vignolesi/Bettelli/tomba.jpg" width="400" height="700"><br><br>
