--- a/Plessi1.html
+++ b/Plessi1.html
@@ -35,7 +35,7 @@
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Alessandro Plessi e il figlio Renato nella Biblioteca Comunale di Vignola,<br> allora situata in un’ampia sala del primo piano della rocca (foto risalente al 1900 ca.).<br> Fonte: Raccolta famiglia Plessi.</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/biblioteca.jpg" width="750" height="550"><br><br><br>
-	<center><big><big><i>Istorie vignolesi narrate a' suoi figli da Alessandro Plessi</i>, Vignola, Tipografia di Antonio Monti, s.d. [ma: 1885].</center></big></big><br>
+	<center><big><big><i>Istorie vignolesi narrate a’ suoi figli da Alessandro Plessi</i>, Vignola, Tipografia di Antonio Monti, s.d. [ma: 1885].</center></big></big><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/Istorie.jpg" width="450" height="600"><br><br><br>
 <center><big><big>Cappella funebre di Plessi, cimitero di Vignola.<br> Il busto fu eseguito da Giuseppe Graziosi (1879-1942), mentre l’iscrizione venne dettata da Tommaso Casini (1859-1917).</center></big></big><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/Tomba intera.jpg" width="450" height="600"><br><br><br>
