--- a/Barozzi.html
+++ b/Barozzi.html
@@ -50,6 +50,8 @@ Nel suo paese natale, risultano attualmente intitolate a Barozzi una Scuola Prim
 	<img src="img/celebri vignolesi/Barozzi/facciata.jpg" width="900" height="600"></p><br>
 <p><big><center>Frontespizio della prima edizione della <i>Regola delli cinque ordini d’architettura</i> (1583). Fonte: google.com</center></big></p>
 		<img src="img/celebri vignolesi/Barozzi/regola.jpg" width="500" height="650"></p><br><br><br>
+<p><big><center>Il tempietto di Sant’Andrea sulla Via Flaminia a Roma, risalente forse al 1553. Fonte: google.com.</center></big></p>
+		<img src="img/celebri vignolesi/Barozzi/flaminia.jpg" width="650" height="500"></p><br><br><br>
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
