--- a/Barozzi.html
+++ b/Barozzi.html
@@ -44,14 +44,14 @@ Barozzi si procurò fama d’insigne trattatista a livello internazionale grazie
 <i>Il Vignola</i> morì a Roma il 7 luglio 1573 (calendario giuliano). Venne inumato nel Pantheon; ora non è più presente l'indicazione del punto esatto della sepoltura.<br>
 Nel suo paese natale, risultano attualmente intitolate a Barozzi una Scuola Primaria e una via del centro storico.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+<p><big><center>Il tempietto di Sant’Andrea sulla Via Flaminia a Roma, risalente forse al 1553. Fonte: google.com.</center></big></p>
+		<img src="img/celebri vignolesi/Barozzi/flaminia.jpg" width="650" height="500"></p><br>
 <p><big><big><center>Il Palazzo dei Banchi di Bologna, sul lato orientale della Piazza Maggiore.<br> La facciata del portico venne eseguita fra il 1565 e il 1568 su progetto di Barozzi. Fonte: google.com</center></big><br>
 	<img src="img/celebri vignolesi/Barozzi/portico.jpg" width="800" height="600"></p><br>
 <p><big><center>Facciata del Palazzo Farnese a Caprarola (VT); dal 1559, Barozzi lavorò lungamente a quest’edificio. Fonte: google.com</center></big><br>
 	<img src="img/celebri vignolesi/Barozzi/facciata.jpg" width="900" height="600"></p><br>
 <p><big><center>Frontespizio della prima edizione della <i>Regola delli cinque ordini d’architettura</i> (1583). Fonte: google.com</center></big></p>
 		<img src="img/celebri vignolesi/Barozzi/regola.jpg" width="500" height="650"></p><br><br><br>
-<p><big><center>Il tempietto di Sant’Andrea sulla Via Flaminia a Roma, risalente forse al 1553. Fonte: google.com.</center></big></p>
-		<img src="img/celebri vignolesi/Barozzi/flaminia.jpg" width="650" height="500"></p><br><br><br>
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
