--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -30,7 +30,7 @@
 <section><br><br><br>
   <h2><strong><big>IL FAVOLEGGIATORE</big></strong></h2><br><br>
   <center>
-  	<p><big>Nel febbraio 2022 è cominciata la nostra trascrizione delle favole che compongono <i><strong>Il Favoleggiatore</strong></i> (dati completi di questo volumetto selmiano: <i>Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX <i>dal M. di S.</i>, Torino, Tip. di G.B. Paravia e Comp., 1857).<br> Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state indicate caso per caso. Le note asteriscate a piè di pagina sono di Sara Scaglioni e Piero Venturelli.</big></p><br><br>
+  	<p><big>Nel febbraio 2022 è cominciata la nostra trascrizione delle favole che compongono <i><strong>Il Favoleggiatore</strong></i> (dati completi di questo volumetto selmiano: <i>Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX <i>dal M. di S.</i>, Torino, Tip. di G.B. Paravia e Comp., 1857).<br> Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state indicate caso per caso. Le note asteriscate sono di Sara Scaglioni e Piero Venturelli.</big></p><br><br>
 
 <table class="table-2">
  <tr>
