--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -71,7 +71,7 @@
 
 <tr>
 <td><big><big><strong><a href="passero.html">19. Il passero solingo</a></strong></td>
-<td><big><big><strong><a href="amorino.html">20. L'amorino e le sue sventure</a></strong></td></tr>
+<td><big><big><strong><a href="amorino.html">20. L’amorino e le sue sventure</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="lucciola.html">21. La lucciola</a></strong></td>
@@ -99,14 +99,14 @@
 
 <tr>
 <td><big><big><strong><a href="morente.html">33. La morente</a></strong></td>
-<td><big><big><strong><a href="aquila.html">34. L’acquila e la gazza</a></strong></td></tr>
+<td><big><big><strong><a href="aquila.html">34. L’aquila e la gazza</a></strong></td></tr>
 <tr>
 <td><big><big><strong><a href="luce.html">35. La luce elettrica</a></strong></td>
 <td><big><big><strong><a href="fanciullo.html">36. Il fanciullo e la candela stearica</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="cerfoglio.html">37. Il prato di cerfoglio</a></strong></td>
-<td><big><big><strong><a href="serpe.html">38. L’acquila e la serpe</a></strong></td></tr>
+<td><big><big><strong><a href="serpe.html">38. L’aquila e la serpe</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="uovo.html">39. L’uovo prodigioso</a></strong></td>
