--- a/Minghelli.html
+++ b/Minghelli.html
@@ -39,14 +39,14 @@ Tra le più significative testimonianze della sua operosa ma purtroppo breve car
 Il nostro personaggio morì il 29 giugno 1822, appena quarantaduenne, a Modena, città dove aveva fissato la propria dimora nel 1804 e dove si era sposato (con Maria Teresa Bardoni) nel 1821. Non lasciò figli.
 A Minghelli il suo paese natale ha voluto dedicare una strada. Inoltre, è tuttora visibile nel cimitero di Vignola una lapide che lo ricorda assieme ad alcuni parenti.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><big><big><center>Porzione degli interventi decorativi realizzati da Minghelli all’interno della Villa Tosi Bellucci, oggi Residenza Municipale di Vignola.</center></big></big></p>
+<p><big><big><center>Porzione degli interventi decorativi realizzati da Minghelli all’interno del Casino Tosi Bellucci.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Minghelli/soffitto.jpg" width="900" height="600"></center><br><br>
 <center><img src="img/celebri vignolesi/Minghelli/soffitto2.jpg"="900" height="600"></center><br><br>
 <p><big><big><center>Lapide funeraria di Minghelli all’interno del cimitero di Vignola.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Minghelli/tomba.jpg" width=700 height=450></center><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021,2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
