--- a/Barbanti Bròdano.html
+++ b/Barbanti Bròdano.html
@@ -55,7 +55,7 @@ Nel 1911 Barbanti Bròdano si trasferì a Roma con la famiglia, composta della m
 	<center><img src="img/celebri vignolesi/Barbanti Brodano/lapide.jpg" width="500" height="650"></center><br><br><br>
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></center></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
