--- a/Tassoni.html
+++ b/Tassoni.html
@@ -42,7 +42,7 @@ La data della scomparsa non è certa: Girolamo Tiraboschi documentò la morte di
 <img src="img/celebri vignolesi/Tassoni/tassoni.jpg" width="400" height="600"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
