--- a/agosto.html
+++ b/agosto.html
@@ -70,7 +70,7 @@ Nell’immagine sottostante, tomba di Giuseppe Barbanti Bròdano (Bologna, cimit
 <strong><big><center>Vuoi saperne di più su Giuseppe Barbanti Bròdano?<br>Allora, visita il suo <a href="Barbanti Bròdano.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</center></strong><br><br>
 <p class="index-p"><strong><a href="Anniversari.html">Indice dei mesi</a></strong></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
