--- a/febbraio.html
+++ b/febbraio.html
@@ -70,7 +70,7 @@ Nell’immagine qui sotto, frontespizio di <i>Faléster dl’Inféren</i> (1951)
 <p><strong><big><big><center>Vuoi saperne di più su Ugo Roli?<br>Allora, visita il suo <a href="Roli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
