--- a/Novità.html
+++ b/Novità.html
@@ -42,6 +42,12 @@
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/roccainfiore.jpg" width="900" height="700"><br><br><br><br><br><br> 
 	
+<p><big><big><span style="text-decoration: underline;">12 aprile 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>UN SOGNO</strong></i>, la quinta favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
+«Racconto il sogno di un certo tale, persona molto reputata de’ suoi tempi, e che fu raccolto dalla sua bocca e tramandato tradizionalmente di generazione in generazione.<br> 
+Fece egli un dì una buona azione, una di quelle azioni che sono da uomo dabbene, integerrimo, di cuore e d’intendimenti immacolati. Ne fu soddisfatto assai, tanto da divenire di un umore sì allegro che non mai parve più lieto in sua vita. Ma la compiacenza dell’opera propria non si restrinse tra i limiti di una modestia cristiana: e cominciò a sentire il pungolo di pompeggiarsene tra sé, e con esso il ruzzolo che ad altri si facesse nota, ed egli ne ricevesse lodi e credito accresciuto di onoratezza. Fra questi pensieri si addormentò, e tosto che fu immerso nel sonno gli si svegliò la fantasia la seguente visione».<br>  
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>	
+
 <p><big><big><span style="text-decoration: underline;">28 marzo 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL PASTORE E LE CAPRE</strong></i>, la quarta favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
 «Un pastore aveva una mandra di pecore, mansuete, obbedienti, che ruminavano nel sito loro assegnato, e stavano accozzate insieme, senza divagare mai qua e là, timidette ad ogni menoma voce che le raccogliesse per ricondurle all’ovile».<br>  
