--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -28,7 +28,7 @@
 </nav>
 </header>
 <section><br>
-  <p><big><strong><a href="Selmi.html">Torna al profilo di Selmi</a></strong></big></p><br><br><br>
+  <p><big><strong><a href="Selmi.html">Profilo di Selmi</a></strong></big></p><br><br><br>
   <h2><strong><big>IL FAVOLEGGIATORE</big></strong></h2><br><br>
   <center>
   	<p><big>Nel febbraio 2022 è cominciata la nostra trascrizione delle favole che compongono <i><strong>Il Favoleggiatore</strong></i> (dati completi di questo volumetto selmiano: <i>Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX <i>dal M. di S.</i>, Torino, Tip. di G.B. Paravia e Comp., 1857).<br> Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state indicate caso per caso. Le note asteriscate sono di Sara Scaglioni e Piero Venturelli.</big></p><br><br>
@@ -123,7 +123,7 @@
 </table>
 </center>
  <br><br><br>
-  <p><big><strong><a href="Selmi.html">Torna al profilo di Selmi</a></strong></big></p><br><br>
+  <p><big><strong><a href="Selmi.html">Profilo di Selmi</a></strong></big></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
