--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -29,7 +29,7 @@
 <section><br><br>
 <h2><big>CHI SIAMO?</big></h2><br><br><br>
 <p><strong><big><big>Questo sito</big></big></strong></p><br>
-<p><big>Il presente sito nasce a Vignola (paese in provincia di Modena) con il primario intento di far conoscere meglio quei concittadini di nascita oppure di adozione che, nel passato più o meno recente, hanno dato maggior lustro, nei diversi ambiti, alla loro comunità di appartenenza. Questo è anche un modo per onorarne la memoria.<br>
+<p><big>Il presente sito nasce a Vignola (paese in provincia di Modena) con il primario intento di far conoscere meglio quei concittadini di nascita oppure di adozione che, nel passato più o meno recente, si sono distinti nei loro rispettivi ambiti professionali. Questo è anche un modo per onorarne la memoria.<br>
 Soprattutto negli ultimi decenni, risulta di frequente complicato rinvenire materiale divulgativo rigoroso, se non talora in forma sparsa, che sia capace di appagare la curiosità delle persone interessate come – eventualmente – di incoraggiare ricerche condotte in prima persona. Alla luce di ciò, questo sito vuole offrire un’interfaccia che permetta all’utente di navigare senza smarrirsi, così da trovare facilmente le informazioni di maggior rilievo intorno alla vita e alle opere dei personaggi più illustri vissuti a Vignola. In queste pagine, inoltre, è riservato spazio a immagini, filmati e ricorrenze sulla comunità di riferimento e la sua storia.<br>
 L’arricchimento reciproco con i lettori è uno degli obiettivi del sito. Chiunque desideri collaborarvi, lo può fare liberamente a beneficio di tutti.  </big></p><br><br>
  
