--- a/maggio.html
+++ b/maggio.html
@@ -30,6 +30,15 @@
 <section><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 <h3><big><strong>MAGGIO</strong></big></h3><br><br><br>
+<p><big><strong>1° maggio 1881</strong>: 1° maggio 1881: uscì a Bologna il primo numero del quotidiano «Don Chisciotte» (4 pagine).<br><br>
+
+Questo giornale, divenuto rapidamente portavoce dell’Associazione Democratica Bolognese, è tuttora ricordato come uno dei più celebri e pugnaci fogli di idee repubblicane e patriottiche presenti nell’Italia del tempo, e <strong>GIUSEPPE BARBANTI BRÒDANO</strong> (1853-1931) fu uno dei suoi fondatori – insieme con Luigi Ìllica (1857-1919), il quale ne assunse poi la direzione, e Luigi Lodi (1856-1933) – e uno degli articolisti più prolifici.<br> 
+A dettare il programma del quotidiano provvide Giosuè Carducci (1835-1807), amico personale di Barbanti Bròdano. Facevano parte della redazione Quirico Filopanti (1812-1894) e Giuseppe Ceneri (1827-1898).<br>
+Oltre a tutti i personaggi citati sopra, tra i collaboratori del foglio figuravano Abdon Altobelli (1849-1909), Felice Cavallotti (1842-1898), Olindo Guerrini (1845-1916), Guido Mazzoni (1859-1943), Enrico Panzacchi (1840-1904), Corrado Ricci (1858-1934) e Aurelio Saffi (1819-1890).<br>
+Il «Don Chisciotte» cessò dopo il numero del 7 gennaio 1885.<br><br>
+Nell’immagine, la prima pagina di un numero del «Don Chisciotte». Fonte: google.com</big></p><br><br>
+<big><strong><big><center>Vuoi saperne di più su Giuseppe Barbanti Bròdano?<br>Allora, visita il suo <a href="Barbanti Bròdano.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong><br><br><br>
+
 <p><big><strong>6 maggio 1807</strong>: nacque a Vignola <strong>CARLO GARAVINI</strong>, diplomatico, viaggiatore, avventuriero, commerciante, geografo e armatore.<br><br> 
 
 Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Carlo Garavini trascorse l’infanzia a Vignola, ma lasciò ben presto il paese natale per esercitare il commercio in alcuni Paesi del Mediterraneo. Imparato l’arabo e diversi dialetti locali, ebbe significative esperienze nel campo della diplomazia internazionale (in Algeria, fra l’altro, fu incaricato d’affari dell’emiro e console degli Stati Uniti d’America) e compì esplorazioni che gli consentirono non solo di venire a conoscenza di usi e costumi di varie popolazioni dell’Africa settentrionale e del Vicino Oriente, ma anche di inviare ad alcuni musei crani beduini e vari reperti, e di rettificare alcuni errori commessi dai geografi.<br>
